--- a/selectCourse/selectCourse.csproj
+++ b/selectCourse/selectCourse.csproj
@@ -8,7 +8,7 @@
     <ApplicationIcon>selectCourse_icon.ico</ApplicationIcon>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <PublishTrimmed>True</PublishTrimmed>
-    <PublishAot>True</PublishAot>
+    <PublishAot>False</PublishAot>
     <AssemblyVersion>2.0.*</AssemblyVersion>
     <FileVersion>2.0.*</FileVersion>
     <Deterministic>false</Deterministic>
